--- a/pixel.html
+++ b/pixel.html
@@ -13,11 +13,11 @@
 <body>
     <div id="connect-dialog">
         <span>
-            <label for="baseurl">url:</label>
+            <label for="baseurl">URL:</label>
             <input id="baseurl" type="text">
         </span>
         <span>
-            <label for="mapid">map:</label>
+            <label for="mapid">Map:</label>
             <input id="mapid" type="text" value="0000">
         </span>
         
